--- a/src/components/Sections/Sections.scss
+++ b/src/components/Sections/Sections.scss
@@ -233,3 +233,9 @@
 .even-section .image__wrapper {
   order: 1;
 }
+
+.cards-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 60px;
+}
